@@ -34,8 +34,50 @@ CREATE TABLE `contacts` (
   `del` tinyint(1) NOT NULL default '0',
   `name` varchar(128) NOT NULL default '',
   `email` varchar(128) NOT NULL default '',
-  `firstname` varchar(128) NOT NULL default '',
-  `surname` varchar(128) NOT NULL default '',
+  `first_name` varchar(128) NOT NULL default '',
+  `middle_name` varchar(128) NOT NULL default '',
+  `last_name` varchar(128) NOT NULL default '',
+  `edu_title` varchar(128) NOT NULL default '',
+  `addon` varchar(128) NOT NULL default '',
+  `nickname` varchar(128) NOT NULL default '',
+  `company` varchar(128) NOT NULL default '',
+  `organisation` varchar(128) NOT NULL default '',
+  `department` varchar(128) NOT NULL default '',
+  `job_title` varchar(128) NOT NULL default '',
+  `note` varchar(128) NOT NULL default '',
+  `tel_work1_voice` varchar(128) NOT NULL default '',
+  `tel_work2_voice` varchar(128) NOT NULL default '',
+  `tel_home1_voice` varchar(128) NOT NULL default '',
+  `tel_home2_voice` varchar(128) NOT NULL default '',
+  `tel_cell_voice` varchar(128) NOT NULL default '',
+  `tel_car_voice` varchar(128) NOT NULL default '',
+  `tel_pager_voice` varchar(128) NOT NULL default '',
+  `tel_additional` varchar(128) NOT NULL default '',
+  `tel_work_fax` varchar(128) NOT NULL default '',
+  `tel_home_fax` varchar(128) NOT NULL default '',
+  `tel_isdn` varchar(128) NOT NULL default '',
+  `tel_preferred` varchar(128) NOT NULL default '',
+  `tel_telex` varchar(128) NOT NULL default '',
+  `work_street` varchar(128) NOT NULL default '',
+  `work_zip` varchar(128) NOT NULL default '',
+  `work_city` varchar(128) NOT NULL default '',
+  `work_region` varchar(128) NOT NULL default '',
+  `work_country` varchar(128) NOT NULL default '',
+  `home_street` varchar(128) NOT NULL default '',
+  `home_zip` varchar(128) NOT NULL default '',
+  `home_city` varchar(128) NOT NULL default '',
+  `home_region` varchar(128) NOT NULL default '',
+  `home_country` varchar(128) NOT NULL default '',
+  `postal_street` varchar(128) NOT NULL default '',
+  `postal_zip` varchar(128) NOT NULL default '',
+  `postal_city` varchar(128) NOT NULL default '',
+  `postal_region` varchar(128) NOT NULL default '',
+  `postal_country` varchar(128) NOT NULL default '',
+  `url_work` varchar(128) NOT NULL default '',
+  `role` varchar(128) NOT NULL default '',
+  `birthday` varchar(128) NOT NULL default '',
+  `rev` varchar(128) NOT NULL default '',
+  `lang` varchar(128) NOT NULL default '',
   `vcard` text NOT NULL,
   PRIMARY KEY  (`contact_id`),
   KEY `user_id` (`user_id`)
